# hmh0803

./: icms.sql  java_api.json  requirements.txt
icms-java/: HELP.md  README.md  pom.xml
icms-py/: .gitignore  README.md  main.py  manage.py  pyproject.toml  requirements.txt  项目结构说明.md
icms-py/ICMS/: asgi.py  settings.py  urls.py  wsgi.py
icms-py/api/: analysis_tasks.py
icms-py/app/: pullStream.py
icms-py/core/: state.py
icms-py/facial_recognition/: facial.py  facial_login.py  pullStream.py  utils.py
icms-py/icms_py/: asgi.py  settings.py  urls.py  wsgi.py
icms-py/icms_py/test_branch/: lq.txt
icms-py/models/: __init__.py  base_model.py
icms-py/schemas/: task_schemas.py
icms-py/test/: main.py
icms-vue/: .env  .env.development  .env.example  .env.production  .gitignore  README.md  package-lock.json  package.json  start-dev.bat  vue.config.js
icms-vue/docs/features/: menu-sync.md
icms-vue/public/: api-test.html
icms-vue/src/: App.vue  main.js  request.js
video-surveillance-ai-integration/: README.md  requirements.txt  告警中心个人工作总结.md
video-surveillance-ai-integration/docs/: API_REFERENCE.md  BEHAVIOR_DETECTION.md  DEVELOPER_GUIDE.md  QUICK_START.md
video-surveillance-ai-integration/reports/: daily_report_2025-07-17_01.md  daily_report_2025-07-17_02.md
video-surveillance-ai-integration/src/: all_in_one_system.py  audio_monitor.py  danger_recognizer.py
video-surveillance-ai-integration/templates/: alerts_history.html  index.html
video-surveillance-ai-integration/test/: flexible_system.py  main.py  run_ai_monitor.bat
(+78 files in other folders)
