[project]
name = "icms_py"
version = "1.0"
description = "教师智能监控系统ai服务端"
authors = [
    {name = "yeye", email = "queenmoon@foxmail.com"}
]
readme = "README.md"
requires-python = "^3.11"  # 表示允许3.11及以上的3.11.x版本（如3.11.9）
dependencies = [
    "fastapi[all]",
    "deepface==0.0.90",
    "tensorflow==2.15.0",
    "keras==2.15.0",
    "tf-keras==2.15.0",
    "numpy==1.26.4",
    "opencv-contrib-python==4.8.0.76",
    "mediapipe==0.10.9",
    "imutils",  # 未指定版本会默认安装最新兼容版
    "python-dotenv",
    "fastapi_cdn_host"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"